# verdant

./: Cargo.toml  README.md  flake.nix  result  tree.txt
.cargo/: config.toml
include/: verdant.h
scripts/: android_setup.sh  build_all.sh  nix_build_so.sh
src/: api.rs  config.rs  crypto.rs  errors.rs  jni.rs  lib.rs  livekit.rs  native.rs  services.rs  verdant.rs
src/auth/: challenge.rs  mod.rs  registration.rs
src/client/: auth.rs
src/discovery/: mod.rs
src/server/: auth.rs  routes.rs
