[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"]}
base64 = "0.22.1"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"]}
opaque-ke = { version = "3.0.0", features = ["ristretto255", "std"]}
ormlite = "0.24.1"
rand = "0.8"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = "1.48.0"
uuid = "1.18.1"
