[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"]}
anyhow = "1.0.100"
base64 = "0.22.1"
env_logger = "0.11.8"
hostname = "0.4.1"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"]}
mdns-sd = "0.15.1"
opaque-ke = { version = "3.0.0", features = ["ristretto255", "std"]}
ormlite = "0.24.1"
pkcs8 = "0.10.2"
rand = "0.8"
reqwest = { version = "0.12.24", features = ["json"] }
rsa = "0.9.8"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
uuid = "1.18.1"
keycast = { git = "https://github.com/vivianlazaras/keycast" }
der = "0.7.10"
spki = { version = "0.7.3", features = ["alloc"] }
