[package]
name = "verdant"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"]}
anyhow = "1.0.100"
base64 = "0.22.1"
env_logger = "0.11.8"
hostname = "0.4.1"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"]}
mdns-sd = "0.15.1"
opaque-ke = { version = "3.0.0", features = ["ristretto255", "std"]}
ormlite = { version = "0.24.1", optional = true }
pkcs8 = "0.10.2"
rand = "0.8"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9.8"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
uuid = { version = "1.18.1", features = ["serde", "v4"]}
keycast = "0.1.4"
der = "0.7.10"
spki = { version = "0.7.3", features = ["alloc"] }
hmac = "0.12.1"
hkdf = "0.12.4"
bincode = { version = "2.0.1", features = ["serde"]}

[features]
ormlite = ["dep:ormlite"]